docs/v8/en/wordreporter/batchprinting-of-diagrams.md
As an alternative to the Word Reporter you can export all diagrams
without their objects, properties etc. in Word format to print them.  
To do this, select this option. 

![](//images.ctfassets.net/utx1h0gfm1om/5LvRjQDwOcwwWGigOuE2k4/4a3320cdd30e52f978d858f67c103f81/329004.png)  
  
On the next page you can define the following settings (similar to Word
Reporter):

-   Create a new set
-   Select units, where diagrams are available for export
-   Select Word template
-   Save Word document in a specific directory. It can be saved to some folder on the disk or to the process4.biz database. On specifying directory you can also set the format of document (.docx, .doc or.pdf). 
-   Export diagrams as embedded Visio files or as images (see [Settings
    for publication](publication-settings))
-   Table of contents - select whether you want to add a table of
    contents
- 	Export diagrams into separate files – select it if you want to save each diagram to separate file.      
-   Automatic adjustment of pages for diagrams 

![BatchPrinting set](//images.ctfassets.net/6mz8d8cle1nl/tIRnhZwGRJgF3A3hF7RKu/da897d32bcee9be44a94a35352f67e7b/BatchPrinting_set.png)

*Set settings*
![BatchPrinting 1](//images.ctfassets.net/6mz8d8cle1nl/7xXVTSSn8sBN22FJqgXblm/56c52354dedec2bd17156e7d7c9a91a4/BatchPrinting_1.png)

*Page orientation for diagrams*

If this option is disabled, a window is generated at the end of the
report, where you can see the default diagram orientation and then
change it on the table current orientation (e.g. from Landscape to
Portrait).

If this option is selected, the page orientation of the diagram
(portrait or landscape) is automatically adopted from the page
orientation of Visio. 

When you have defined all settings, click Next. In the following window
you can define Advanced data filtering for diagrams, as described here
in [Advanced Filtering of Data](advanced-filtering-of-data).

![](//images.ctfassets.net/utx1h0gfm1om/6nmafuM8vuccoGCKSSaCKE/e0769ec122c06c2ff650e0d10f6f8bdf/328996.png)

*Advanced data filtering*

When you click ***Next,*** a window opens where you can choose diagrams
for export, as described in the [Advanced Diagram
sorting](extended-diagram-sorting). Checkbox “Show chapters in the report” allow remove chapter's naming for “Diagram tree sorting”.

![BatchPrinting 2](//images.ctfassets.net/6mz8d8cle1nl/5OfzSyHTzRnTlNbIhJSznL/af992f00188d7ed6a187b43009312ff7/BatchPrinting_2.png)

*Advanced diagram sorting*

If you click ***Finish,*** a report with all selected diagrams is
generated.

![](//images.ctfassets.net/utx1h0gfm1om/6qiJLD8xfqsYQ8AU0MYcie/fefa6efb9ebcf6de06f5e239ccb93c48/328240.png)

*Diagram in Word document*

 
<hr style="padding-top:2rem" />
<a href="https://github.com/process4/docs/issues" target="_blank" class="bgw btn btn-primary btn-lg shadow-sm">Report an issue</a>
<a href="https://github.com/process4/docs" target="_blank" class="bgw btn btn-primary btn-lg shadow-sm" style="margin-left:10px;">View source code</a>